Added chest/pop up text/implemented wax resizing

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,9 @@
     <Compile Include="Assets\Scripts\Character\TestScript.cs" />
     <Compile Include="Assets\Scripts\Checkpoint\Checkpoint.cs" />
     <Compile Include="Assets\Scripts\Checkpoint\CheckpointManager.cs" />
+    <Compile Include="Assets\Scripts\Colectables\ChestController.cs" />
+    <Compile Include="Assets\Scripts\Colectables\FloatingTextController.cs" />
+    <Compile Include="Assets\Scripts\Colectables\WaxController.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Rope\RoperSetter.cs" />
     <Compile Include="Assets\Scripts\Rope\SpiderRope.cs" />
