--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,8 +79,13 @@
     <Compile Include="Assets\Scripts\Colectables\FloatingTextController.cs" />
     <Compile Include="Assets\Scripts\Colectables\TextOnTopFix.cs" />
     <Compile Include="Assets\Scripts\Colectables\WaxController.cs" />
+    <Compile Include="Assets\Scripts\Endpoint\EndpointController.cs" />
+    <Compile Include="Assets\Scripts\Endpoint\ReachEndController.cs" />
     <Compile Include="Assets\Scripts\Interactables\SwitchController.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\Monsters &amp; Spikes\IceSpikeController.cs" />
+    <Compile Include="Assets\Scripts\Monsters &amp; Spikes\SpikeActivator.cs" />
+    <Compile Include="Assets\Scripts\Monsters &amp; Spikes\SpikeController.cs" />
     <Compile Include="Assets\Scripts\Rope\RoperSetter.cs" />
     <Compile Include="Assets\Scripts\Rope\SpiderRope.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
